--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#6356E5">
     <meta name="msapplication-navbutton-color" content="#6356E5">
     <meta name="apple-mobile-web-app-status-bar-style" content="#6356E5">
-    <title>Arun Yadav</title>
+    <title>Arun Yadav - Portfolio</title>
     <!-- <link rel="shortcut icon" type="image/png" href="/img/logo.png"/> -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
