--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2>About Me</h2>
         <div class="enna-pathi">
           <p>
-            I’m a 23 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 2 years of professional experience. I have worked in payment industry at <a target="_blank" href="//newgenpayments.com/">Newgen Payments</a>. Currently, I work in Medical Technology company at <a target="_blank" href="//thelattice.in/">Lattice Innovations</a> with a group of brilliant Minds.
+            I’m a 23 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 2 years of professional experience. I have worked in payment industry at <a target="_blank" href="//newgenpayments.com/">Newgen Payments</a>. Then I worked in Medical Technology company at <a target="_blank" href="//thelattice.in/">Lattice Innovations</a> for more than a year leaving the organisation as Lead Software Developer.  Currently, I work with a group of brilliant Minds at <a target="_blank" href="//electronut.in/"> Electronut Labs</a>.
           </p>
           <p id="second">
             I love learning new technologies and interesting stuff. As of my professional proficiency, I have my professional expertise in AngularJS, Nodejs, Jquery, socketIO, PHP, JAVA.
