--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Arun Yadav</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <title>Arun Yadav - Portfolio</title>
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Hotjar Tracking Code for https://arunyadav.com -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 1279119, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104625028-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-104625028-2');
+    </script>
+
 </head>
 
 <body>
@@ -250,7 +271,7 @@
                     <p>Mail me [at]  <a href="mailto:hello@arunyadav.com?Subject=Hello%20Arun">hello@arunyadav.com</a></p>
                 </div>
             </div>
-                    <div class="text-center foot_back">
+                    <div class=" foot_back">
                         <div class="credit">
                             Designed and Coded by <a class="" href="https://arunyadav.com">Arun Yadav</a>  | Made with <p class="heart">❤</p> in India
                         </div>
