added update for 2019

--- a/index.html
+++ b/index.html
@@ -80,18 +80,19 @@
                     <div class="about_me_title">About Me</div>
                     <div class="about_me_content">
                         <p>
-                            I’m a 25 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 3+
+                            I’m a 26 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 3+
                             years of professional experience.
                             I have worked in payment industry at <a href="https://newgenpayments.com" target="_blank"
                                 class="company_name newgen"> <img class="company_img" src="./assets/company/newgen.png"
                                     alt="">Newgen Payments</a>.
-                            Then I worked in Medical Technology company at <a href="https://thelattice.in" target="_blank"
+                            Then I worked in Medical Technology company as Lead Software Developer at <a href="https://thelattice.in" target="_blank"
                                 class="company_name lattice">
-                                <img class="company_img" src="./assets/company/lattice.png" alt="">Lattice Innovations</a>
-                            for more than a year leaving the organisation as Lead Software Developer.
-                            Currently, I work with a group of brilliant Minds at <a href="https://electronut.in" target="_blank"
-                                class="company_name electronut">
+                                <img class="company_img" src="./assets/company/lattice.png" alt="">Lattice Innovations</a>. 
+                                Later swtiched to a new sector to explore, and joined Embedded Hardware System company 
+                                <a href="https://electronut.in" target="_blank" class="company_name electronut">
                                 <img class="company_img" src="./assets/company/electronut.png" alt="">Electronut Labs</a>.
+                            Currently, I work with a group of brilliant Minds at <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
+                                <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a> as Senior Software Engineer.
 
                         </p>
                         <p>
