follow along mouse added

--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
                     </div>
         </section>
     </div>
+    <div id='main-cursor'></div>
+    <div id='follow-cursor'></div>
 </body>
 <script src="js/main.js"></script>
 <script>
