--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="about_me_title">About Me</div>
                     <div class="about_me_content">
                         <p>
-                            I’m a 26 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 3+
+                            I’m a 27 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 5+
                             years of professional experience.
                             I have worked in payment industry at <a href="https://newgenpayments.com" target="_blank"
                                 class="company_name newgen"> <img class="company_img" src="./assets/company/newgen.png"
@@ -91,8 +91,8 @@
                                 Later swtiched to a new sector to explore, and joined Embedded Hardware System company 
                                 <a href="https://electronut.in" target="_blank" class="company_name electronut">
                                 <img class="company_img" src="./assets/company/electronut.png" alt="">Electronut Labs</a>.
-                            Currently, I work with a group of brilliant Minds at <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
-                                <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a> as Senior Software Engineer.
+                            I had work with a group of brilliant Minds at <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
+                                <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a> as and concluded as Team Lead.
 
                         </p>
                         <p>
