--- a/index.html
+++ b/index.html
@@ -80,7 +80,27 @@
                     <div class="about_me_title">About Me</div>
                     <div class="about_me_content">
                         <p>
-                            I’m a 27 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 5+
+                            I'm Arun Yadav, a 29-year-old Full-Stack developer based in New Delhi, India. With over 7 years of experience in the software industry, I've had the opportunity to work on a different domain including <i>FinTech</i>, <i>MedTech</i>, <i>EdTech</i>, <i>Embedded Systems</i>, and <i>Aerospace & Defence</i>. This gave me opportunity to develop expertise in a range of technologies and frameworks, including Javascript, JAVA, Swift3, PHP, MySQL, MongoDB, AngularJS, Angular, NodeJS, Android, Ionic Framework, Jersey2.0, TweenMax, ExpressJS, SocketIO, WordPress, Magento, and Codeignitor.
+                        </p>
+                        <p>
+                            What I love most about my work is the opportunity to constantly learn and explore new domain and technologies. I'm always on the lookout for interesting challenges and opportunities to expand my skill set.
+                        </p>
+                        <p>
+                            In my previous roles, I've had the privilege of working with some truly brilliant minds, including at <a href="https://newgenpayments.com" target="_blank"
+                            class="company_name newgen"> <img class="company_img" src="./assets/company/newgen.png"
+                                alt="">Newgen Payments</a>, <a href="https://thelattice.in" target="_blank"
+                                class="company_name lattice">
+                                <img class="company_img" src="./assets/company/lattice.png" alt="">Lattice Innovations</a>, <a href="https://electronut.in" target="_blank" class="company_name electronut">
+                                    <img class="company_img" src="./assets/company/electronut.png" alt="">Electronut Labs</a>, <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
+                                        <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a>, <a href="https://simplilearn.com/" target="_blank" class="company_name zenius">
+                                            <img class="company_img" src="./assets/company/zenius.png" alt="">Zenius</a>. Current, I am working at <a href="https://simplilearn.com/" target="_blank" class="company_name threye">
+                                                <img class="company_img" src="./assets/company/threye.png" alt="">Threye Interactive</a>, where I am leading a talented group of developers and help them achieve their full potential.
+                        </p>
+                        <p>
+                            When I'm not coding, you can usually find me tinkering with hardware projects, or exploring the latest tech trends. I'm passionate about using technology to solve real-world problems, and I'm always excited to connect with others who share that vision.
+                        </p>
+                        <!-- <p>
+                            I’m a 29 year old philomath and a Full-Stack developer based in New Delhi, India. I’ve 7+
                             years of professional experience.
                             I have worked in payment industry at <a href="https://newgenpayments.com" target="_blank"
                                 class="company_name newgen"> <img class="company_img" src="./assets/company/newgen.png"
@@ -94,13 +114,13 @@
                             I had work with a group of brilliant Minds at <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
                                 <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a> as and concluded as Team Lead.
 
-                        </p>
-                        <p>
+                        </p> -->
+                        <!-- <p>
                             I love learning new technologies and interesting stuff.I have my professional expertise in
                             <i>Javascript, JAVA, Swift3, PHP, MySQL, MongoDB</i>. Expertise in frameworks like : <i>AngularJS,
                                 Angular, NodeJS, Android, Ionic Framework, Jersey2.0, TweenMax, ExpressJS, SocketIO,
                                 WordPress, Magento, Codeignitor.</i>
-                        </p>
+                        </p> -->
                         <p class="xs-mt-30">
                             <a href="https://www.linkedin.com/in/arun-yadav-888378125/" target="_blank" class="social_logo linkedin">
                                 <img class="social_img" src="./assets/social/linkedin.png" alt=""> LinkedIn</a>
