--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                 class="company_name lattice">
                                 <img class="company_img" src="./assets/company/lattice.png" alt="">Lattice Innovations</a>, <a href="https://electronut.in" target="_blank" class="company_name electronut">
                                     <img class="company_img" src="./assets/company/electronut.png" alt="">Electronut Labs</a>, <a href="https://simplilearn.com/" target="_blank" class="company_name simplilearn">
-                                        <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a>, <a href="https://simplilearn.com/" target="_blank" class="company_name zenius">
-                                            <img class="company_img" src="./assets/company/zenius.png" alt="">Zenius</a>. Current, I am working at <a href="https://simplilearn.com/" target="_blank" class="company_name threye">
+                                        <img class="company_img" src="./assets/company/simplilearn.jpg" alt="">Simplilearn</a>, <a href="https://www.zenius.net/" target="_blank" class="company_name zenius">
+                                            <img class="company_img" src="./assets/company/zenius.png" alt="">Zenius</a>. Current, I am working at <a href="https://www.threye.com/" target="_blank" class="company_name threye">
                                                 <img class="company_img" src="./assets/company/threye.png" alt="">Threye Interactive</a>, where I am leading a talented group of developers and help them achieve their full potential.
                         </p>
                         <p>
@@ -341,7 +341,7 @@
 
     $(window).on('scroll', function () {
         var scroll = $(window).scrollTop();
-        $('#first').css('background', 'linear-gradient(' + (51 + scroll / 10) + 'deg, #273b48    ' + (34 + scroll / 10) + '% , white ' + (34 + scroll / 10) + '%)')
+        // $('#first').css('background', 'linear-gradient(' + (51 + scroll / 10) + 'deg, #273b48    ' + (34 + scroll / 10) + '% , white ' + (34 + scroll / 10) + '%)')
     })
 </script>
 
